--- a/ClassesHW/ClassesHW.csproj
+++ b/ClassesHW/ClassesHW.csproj
@@ -43,11 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EliteMonster.cs" />
     <Compile Include="monster.cs" />
     <Compile Include="player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RageMonster.cs" />
     <Compile Include="room.cs" />
+    <Compile Include="ShieldedMonster.cs" />
+    <Compile Include="TrainingRoom.cs" />
+    <Compile Include="TreasureRoom.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
